Fix add list input positioning on mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -150,7 +150,7 @@ body > .container {
 .add-list-popup {
   display: none;
   position: absolute;
-  top: 59px;
+  top: 26px;
   width: 100%;
 }
 
@@ -334,6 +334,10 @@ body > .container {
 
   .sidebar .add-list-btn {
     margin-top: 16px;
+  }
+
+  .add-list-popup {
+    top: 59px;
   }
 
   .lists,
